@@ -5,6 +5,9 @@ Revision history for {{$dist->name}}
 
           delay loading more libraries until needed (thanks, Olivier Mengué!)
 
+          excluded filenames in GatherDir were sometimes matched too fuzzily
+          (thanks, Mike Doherty)
+
 4.300029  2013-01-14 20:03:15 America/New_York
           allow :version directive in root section to require a given version
           of Dist::Zilla
